# smrs

./: README.md  main.py  pyproject.toml  run_smrs_on_dataset.py  select_random_queries.py  smrs.py
